--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -1,13 +1,17 @@
 name: auto-merge
 
-on:
-  pull_request:
+on: [pull_request_target]
 
 jobs:
   auto-merge:
     runs-on: ubuntu-latest
+    # Guarantee that commit comes from Dependabot (don't blindly trust external GitHub Actions)
+    if: github.actor == 'dependabot[bot]'
     steps:
-      - uses: ahmadnassri/action-dependabot-auto-merge@v2
+      - name: 'Checkout repository'
+        uses: actions/checkout@v2
+      - name: 'Automerge dependency updates from Dependabot'
+        uses: ahmadnassri/action-dependabot-auto-merge@v2
         with:
           target: patch
           github-token: ${{ secrets.DEPENDABOT_TOKEN }}
